added swagger to auth handlers
